--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer id="main-footer" class="py-4 bg-primary text-white text-center">
+<footer id="main-footer" class="py-4 bg-primary text-black text-center">
     Copyright &copy;
-    <span class="year"></span> RooMe 2023
+    <span class="year"></span> RooMe
 </footer>
