--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -5,7 +5,7 @@ img {
   width: 100%; }
 
 .logo {
-  width: 173px; }
+  width: 120px; }
 
 .navbar {
   opacity: 0.9;
@@ -16,9 +16,21 @@ img {
 .social a {
   margin-right: 0.4rem; }
 
+.container-section{
+  height:100%
+}
+
 #showcase {
-  background: url(../img/showcase.jpg) no-repeat top center fixed/cover;
+  /* fixed cover */
+  /* background: linear-gradient(rgba(51, 51, 51, 0.5), rgba(51, 51, 51, 0.5)); */
+  background:linear-gradient(rgba(37, 37, 37, 0.65), rgba(37, 37, 37, 0.65)),
+  url(../img/hero-sec.jpg) no-repeat center center fixed;
+  /* background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed; */
+  background-size: cover;
   position: relative;
+  
   min-height: 650px;
   color: #fff;
   padding-top: 6rem; }
@@ -33,7 +45,22 @@ img {
     left: 0;
     min-height: 400px;
     width: 100%;
-    background: rgba(51, 51, 51, 0.8); }
+    
+    /* background: rgba(51, 51, 51, 0.904);*/ } 
+
+#register {
+  background:linear-gradient(rgba(37, 37, 37, 0.65), rgba(37, 37, 37, 0.65)),
+  url(../img/hero-sec.jpg) no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+}
+#login {
+  height: 80vh;
+  background:linear-gradient(rgba(37, 37, 37, 0.65), rgba(37, 37, 37, 0.65)),
+  url(../img/hero-sec.jpg) no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+}
 
 #services {
   background: url(../img/building.jpg) no-repeat top center fixed/cover;
