--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -10,7 +10,7 @@
             <div class="card">
             <div class="card-header bg-primary text-white">
                 <h4>
-                    <box-icon name='user-plus' type='solid' ></box-icon> Registrate</h4>
+                    <i class="fas fa-user-plus"></i> Registrate</h4>
             </div>
             <div class="card-body">
             <!-- Alerts -->
@@ -18,52 +18,50 @@
             <form action="{% url 'register' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" name="firstname" class="input-text" placeholder="Nombre" required>
+                    
+                    <input type="text" name="firstname" class="form-control" placeholder="Nombre" required>
                     <!-- <i class="fa fa-user"></i> -->
                 </div>
             
                 <div class="form-group">
-                    <input type="text" name="lastname" class="input-text" placeholder="Apellido" required>
+                    <input type="text" name="lastname" class="form-control" placeholder="Apellido" required>
                     <!-- <i class="fa fa-user"></i> -->
                 </div>
             
                 <div class="form-group ">
-                    <input type="text" name="username" class="input-text" placeholder="Usuario" required>
+                    <input type="text" name="username" class="form-control" placeholder="Usuario" required>
                     
                 </div>
             
                 <div class="form-group">
-                    <input type="email" name="email" class="input-text" placeholder="Email" required>
+                    <input type="email" name="email" class="form-control" placeholder="Email" required>
                     
                 </div>
             
                 <div class="form-group">
-                    <input type="password" name="password" class="input-text" placeholder="Contraseña" required>
+                    <input type="password" name="password" class="form-control" placeholder="Contraseña" required>
                     
                 </div>
             
                 <div class="form-group">
-                    <input type="password" name="confirm_password" class="input-text" placeholder="Confirmar contraseña" required>
+                    <input type="password" name="confirm_password" class="form-control" placeholder="Confirmar contraseña" required>
                     
                 </div>
             
                 <div class="form-group">
-                    <input type="text" name="carrera" class="input-text" placeholder="Programa academico" required>
+                    <input type="text" name="carrera" class="form-control" placeholder="Programa academico" required>
                     
                 </div>
             
                 <div class="form-group">
-                    <select name="genero" id="lang">
+                    <select class="form-control" name="genero" id="lang">
                     <option value="masculino">Masculino</option>
                     <option value="femenino">Femenino</option>
-                   </select>
+                </select>
                 </div>
-            
+                
+                <input type="submit" value="Registrate" class="btn btn-success btn-block mb-2">
                 <div class="form-group mb-0 clearfix">
-                    <button type="submit" class="btn-md btn-success float-left">Registrar</button>
-                </div>
-                                    
-                <div class="extra-login clearfix">
                     <span><p>Ya eres miembro? <a href="{% url 'login' %}" class="thembo"> Inicia sesion aqui</a></p></span>
                 </div>
             </form>
@@ -73,65 +71,4 @@
       </div>
     </div>
 </section>
-  {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-                    
-
-
-
-<<<<<<< HEAD
-=======
-    <div class="form-group form-box">
-        <input type="text" name="username" class="input-text" placeholder="Username" required>
-        <i class="fa fa-user"></i>
-    </div>
-
-    <div class="form-group form-box">
-        <input type="email" name="email" class="input-text" placeholder="Email Address" required>
-        <i class="flaticon-mail"></i>
-    </div>
-
-    <div class="form-group form-box">
-        <input type="password" name="password" class="input-text" placeholder="Password" required>
-        <i class="flaticon-lock"></i>
-    </div>
-
-    <div class="form-group form-box">
-        <input type="password" name="confirm_password" class="input-text" placeholder="Confirm Password" required>
-        <i class="flaticon-lock"></i>
-    </div>
-
-    <div class="form-group form-box">
-        <input type="text" name="carrera" class="input-text" placeholder="Academic Program" required>
-        <i class="flaticon-lock"></i>
-    </div>
-
-    <div>
-        <select name="genero" id="lang" placeholder="Sex">
-        <option value="hombre">Hombre</option>
-        <option value="mujer">Mujer</option>
-       </select>
-    </div>
-
-    <div class="form-group mb-0 clearfix">
-        <button type="submit" class="btn-md btn-success float-left">Register</button>
-    </div>
-                        
-    <div class="extra-login clearfix">
-        <span><p>Already a member? <a href="{% url 'login' %}" class="thembo"> Login here</a></p></span>
-    </div>
-</form>
->>>>>>> 38656814eaba21af964f6126fdf7755c2476821e
-                    
-               
+{% endblock %}
