listado de habitaciones

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -55,9 +55,16 @@
             
                 <div class="form-group">
                     <select class="form-control" name="genero" id="lang">
-                    <option value="masculino">Masculino</option>
-                    <option value="femenino">Femenino</option>
-                </select>
+                        <option value="masculino">Masculino</option>
+                        <option value="femenino">Femenino</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <select class="form-control" name="perfil" id="lang">
+                        <option value="estudiante">Estudiante</option>
+                        <option value="admin">Administrador</option>
+                    </select>
                 </div>
                 
                 <input type="submit" value="Registrate" class="btn btn-success btn-block mb-2">
