--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -11,17 +11,15 @@
       <div class="home-search p-5">
         <div class="overlay p-5">
 
-          <h1 class="display-2 mb-4">
+          <h1 class="display-2 mb-4 text-white">
             RooMe
           </h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
-            voluptatum tempore! Consectetur, id commodi!</p>
         
           </div>
         </div>
       </div>
     </div>
-  </section>
+</section>
 <br>
 
 
@@ -32,23 +30,24 @@
         <div class="col-md-4">
           <i class="fas fa-comment fa-4x mr-4"></i>
           <hr>
-          <h3>Renta de habitaciones</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <h3 class="text-white">Renta de habitaciones</h3>
+          <p>Descubre comodidad y conveniencia en nuestras habitaciones en alquiler. 
+            Espacios acogedores y bien equipados te esperan para una estancia placentera. 
+            ¡Reserva ahora y disfruta tu estancia con nosotros!</p>
         </div>
         <div class="col-md-4">
           <i class="fas fa-home fa-4x mr-4"></i>
           <hr>
-          <h3>Encuentra tu Roomate</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <h3 class="text-white">Encuentra tu Roomate</h3>
+          <p>¿Buscas compañero de piso? Encuentra tu roomie ideal en nuestra plataforma. 
+            Conectamos personas en busca de un hogar compartido. ¡Regístrate y comienza tu búsqueda hoy mismo!</p>
         </div>
         <div class="col-md-4">
           <i class="fas fa-suitcase fa-4x mr-4"></i>
           <hr>
-          <h3>Precios exclusivos</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <h3 class="text-white">Precios exclusivos</h3>
+          <p>Descubre precios exclusivos en nuestra aplicación de renta de habitaciones para estudiantes universitarios. 
+            Alojamiento de calidad a precios asequibles. ¡Tu comodidad y éxito académico son nuestra prioridad!</p>
         </div>
       </div>
     </div>
