--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -63,9 +63,9 @@ img {
 }
 
 #services {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
+  /* background: url(../img/building.jpg) no-repeat top center fixed/cover; */
   min-height: 300px;
-  position: relative;
+  position: relative; 
   overflow: hidden; }
   #services::before {
     content: '';
@@ -74,7 +74,7 @@ img {
     left: 0;
     min-height: 100%;
     width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
+    background: #6C96F8; }
 
 #showcase-inner {
   background: url(../img/building.jpg) no-repeat top center fixed/cover;
