cambios barra search

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -35,8 +35,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h2>We Search For The Perfect Home</h2>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <h2>En busca de la habitacion perfecta</h2>
+          <p class="lead">En RooMe trabajamos para ofrecerte la mejor habitacion a un precio justo!</p>
           <img src="{% static 'img/hero-sec.jpg' %}" alt=""> 
           <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
             neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
@@ -47,9 +47,9 @@
   </section>
 
   <!-- Work -->
-  <section id="work" class="bg-dark text-white text-center">
-    <h2 class="display-4">We Work For You</h2>
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
+  <section id="work" class="text-white text-center">
+    <h2 class="display-4">Trabajamos para ti</h2>
+    <h4>Encuentra las mejores habitaciones con RooMe, seguridad, calidad y comodidad en un solo lugar. No te pierdas de nuestros servicios.</h4>
     <hr>
     
   </section>
@@ -57,9 +57,9 @@
   <!-- Team -->
   <section id="team" class="py-5">
     <div class="container">
-      <h2 class="text-center">Our Team</h2>
+      <h2 class="text-center">Nuestro equipo</h2>
       <div class="row text-center">
-        <h1>Team RooMe</h1>    
+        <h1>Equipo RooMe</h1>    
       </div>
     </div>
   </section>
