--- a/RooMe/static/css/bootstrap.css
+++ b/RooMe/static/css/bootstrap.css
@@ -1672,8 +1672,7 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #6C96F8;
-  border-color: #6C96F8; }
+  background-color: #6C96F8; }
   .btn-success:hover {
     cursor: pointer;
     color: #fff;
