--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -77,9 +77,9 @@ img {
     background: #6C96F8; }
 
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
+  /* background: url(../img/building.jpg) no-repeat fixed; */
   position: relative;
-  overflow: hidden;
+  overflow: hidden; 
   min-height: 200px; }
   #showcase-inner::before {
     content: '';
@@ -88,11 +88,12 @@ img {
     left: 0;
     min-height: 100%;
     width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
+    background: #6C96F8; }
   #showcase-inner.showcase-search {
     min-height: 270px; }
 
 #work {
+  background: #325096d3;
   padding: 6rem 0; }
 
 .listing-preview a {
