--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -8,7 +8,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">User Dashboard</h1>
-          <p class="lead">Manage your BT Real Estate account</p>
+          <p class="lead">Administra tu RooMe</p>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="{% url 'index' %}">
-              <i class="fas fa-home"></i> Home</a>
+              <i class="fas fa-home"></i> Inicio</a>
           </li>
           <li class="breadcrumb-item active"> Dashboard</li>
         </ol>
