--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -1,3 +1,6 @@
+.color-personalizado {
+  color: #6C96F8; /* Reemplaza esto con tu valor hexadecimal */
+}
 .btn-secondary {
   color: #fff !important; }
 
