--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 
 {% block branding %}
   <h1 id="head">
-    <img src="{% static 'img/logoo.png' %}" alt="BT Real Estate" height=73 width=auto class="brand_img"> Admin Area de RooMe
+    <img src="{% static 'img/logoo.png' %}" alt="RooMe" height=73 width=auto class="brand_img"> Admin Area de RooMe
   </h1>
 {% endblock %}
 {% block extrastyle %}
