--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% load static %}
-
+{% load humanize %}
 
 {% block title %} | Welcome {% endblock %}
 
@@ -72,50 +72,82 @@
 {% include 'partials/_alerts.html' %}
 
 <!-- listings -->
+<section id="listings" class="py-5">
+  <div class="container">
+    <h3 class="text-center mb-3">Ultimas Habitaciones</h3>
+    <div class="row">
+      {% if rooms %}
+        {% for room in rooms %}
+          <!-- Listing 1 -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <img class="card-img-top" src="{{ room.image.url }}" alt="">
+              <div class="card-img-overlay">
+                <h2>
+                  <span class="badge badge-secondary text-dark">${{ room.price | intcomma}}</span>
+                </h2>
+              </div>
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4 class="text-dark">{{ room.title }}</h4>
+                  <p class="text-muted">
+                    <i class="fas fa-map-marker color-personalizado"></i> {{ room.city }} {{ room.state }}, {{ room.location }}</p>
+                </div>
+                <hr>
+                <div class="row py-2 color-personalizado">
+                  <div class="col-6">
+                    <i class="fas fa-th-large"></i> Area: {{ room.area }}</div>
+                  <div class="col-6">
+                    <i class="fas fa-car"></i> Garaje: {{ room.garage }}</div>
+                </div>
+                <div class="row py-2 color-personalizado">
+                  <div class="col-6">
+                    <i class="fas fa-bed"></i> Habitaciones: {{ room.bedrooms }}</div>
+                  <div class="col-6">
+                    <i class="fas fa-bath"></i> Baños: {{ room.bathrooms }}</div>
+                </div>
+                <a href="" class="btn btn-primary btn-block">Mas Informacion</a>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <div class="col-md-12">
+          <p>No hay habitaciones disponibles</p>
+        </div>
+      {% endif %}
 
-  <section id="services" class="py-5 bg-secondary text-white">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-4">
-          <i class="fas fa-comment fa-4x mr-4"></i>
-          <hr>
-          <h3 class="text-white">Renta de habitaciones</h3>
-          <p>Descubre comodidad y conveniencia en nuestras habitaciones en alquiler. 
-            Espacios acogedores y bien equipados te esperan para una estancia placentera. 
-            ¡Reserva ahora y disfruta tu estancia con nosotros!</p>
-        </div>
-        <div class="col-md-4">
-          <i class="fas fa-home fa-4x mr-4"></i>
-          <hr>
-          <h3 class="text-white">Encuentra tu Roomate</h3>
-          <p>¿Buscas compañero de piso? Encuentra tu roomie ideal en nuestra plataforma. 
-            Conectamos personas en busca de un hogar compartido. ¡Regístrate y comienza tu búsqueda hoy mismo!</p>
-        </div>
-        <div class="col-md-4">
-          <i class="fas fa-suitcase fa-4x mr-4"></i>
-          <hr>
-          <h3 class="text-white">Precios exclusivos</h3>
-          <p>Descubre precios exclusivos en nuestra aplicación de renta de habitaciones para estudiantes universitarios. 
-            Alojamiento de calidad a precios asequibles. ¡Tu comodidad y éxito académico son nuestra prioridad!</p>
-        </div>
+    </div>
+  </div>
+</section>
+
+<!-- Informacion -->
+<section id="services" class="py-5 bg-secondary text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <i class="fas fa-comment fa-4x mr-4"></i>
+        <hr>
+        <h3 class="text-white">Renta de habitaciones</h3>
+        <p>Descubre comodidad y conveniencia en nuestras habitaciones en alquiler. 
+          Espacios acogedores y bien equipados te esperan para una estancia placentera. 
+          ¡Reserva ahora y disfruta tu estancia con nosotros!</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-home fa-4x mr-4"></i>
+        <hr>
+        <h3 class="text-white">Encuentra tu Roomate</h3>
+        <p>¿Buscas compañero de piso? Encuentra tu roomie ideal en nuestra plataforma. 
+          Conectamos personas en busca de un hogar compartido. ¡Regístrate y comienza tu búsqueda hoy mismo!</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-suitcase fa-4x mr-4"></i>
+        <hr>
+        <h3 class="text-white">Precios exclusivos</h3>
+        <p>Descubre precios exclusivos en nuestra aplicación de renta de habitaciones para estudiantes universitarios. 
+          Alojamiento de calidad a precios asequibles. ¡Tu comodidad y éxito académico son nuestra prioridad!</p>
       </div>
     </div>
-  </section>
-
-  <div class="container">
-    {% for room in rooms %}
-      <h1>Descripción: {{ room.description }}</h3>
-      <h3>Precio: {{ room.price }}</h3>
-      <h3>Ubacicación: {{ room.location }}</h3>
-      <h3>Reservada: {{ room.reserved }}</h3>
-      <h3>Habitaciones: {{ room.bedrooms }}</h3>
-      <h3>Baños: {{ room.bathrooms }}</h3>
-      <h3>Área: {{ room.area }}</h3>
-      <img src="{{ room.image.url }}">
-    {% endfor %}
-    <br />
-    <br />
   </div>
-
-
+</section>
 {% endblock %}
