--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,9 +15,10 @@
           </h1>
           <p class="lead">Encuentra la habitacion que se ajuste a tus necesidades!</p>
           <div class="search">
-            <form action=""> 
+            <form method="GET"> 
               <!-- Form Row 1 -->
               <div class="form-row">
+                
                 <div class="col-md-4 mb-3">
                   <label class="sr-only">Keywords</label>
                   <input type="text" name="keywords" class="form-control" placeholder="Palabras clave">
@@ -37,9 +38,11 @@
                     {% endfor %}
                   </select>
                 </div>
+
               </div>
               <!-- Form Row 2 -->
               <div class="form-row">
+
                 <div class="col-md-6 mb-3">
                   <label class="sr-only">Bedrooms</label>
                   <select name="bedrooms" class="form-control">
@@ -49,6 +52,7 @@
                     {% endfor %}
                   </select>
                 </div>
+
                 <div class="col-md-6 mb-3">
                   <select name="price" class="form-control" id="type">
                     <option selected="true" disabled="disabled">Precio Max (Cualquiera)</option>
@@ -57,8 +61,11 @@
                     {% endfor %}
                   </select>
                 </div>
+                
               </div>
+
               <button class="btn btn-success btn-block mt-4" type="submit">Buscar</button>
+
             </form>
           </div>
         </div>
@@ -89,9 +96,9 @@
               </div>
               <div class="card-body">
                 <div class="listing-heading text-center">
-                  <h4 class="text-dark">{{ room.title }}</h4>
+                  <h4 class="text-dark"> {{ room.location }}</h4>
                   <p class="text-muted">
-                    <i class="fas fa-map-marker color-personalizado"></i> {{ room.city }} {{ room.state }}, {{ room.location }}</p>
+                    <i class="fas fa-map-marker color-personalizado"></i> {{ room.location }}</p>
                 </div>
                 <hr>
                 <div class="row py-2 color-personalizado">
