--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -96,7 +96,7 @@
               </div>
               <div class="card-body">
                 <div class="listing-heading text-center">
-                  <h4 class="text-dark"> {{ room.location }}</h4>
+                  <h4 class="text-dark"> {{ room.title }}</h4>
                   <p class="text-muted">
                     <i class="fas fa-map-marker color-personalizado"></i> {{ room.location }}</p>
                 </div>
