--- a/templates/rooms/rooms.html
+++ b/templates/rooms/rooms.html
@@ -49,8 +49,20 @@
           <!-- Thumbnails -->
           
           <!-- Fields -->
-          <div class="row mb-5 fields">
-            <div class="col-md-6">
+          
+          
+        
+
+          <!-- Description -->
+          <div class="row mb-5">
+            <div class="col-md-12">
+                {{ rooms.description }}
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-3">
+            <div class="">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item text-dark">
                   <i class="fas fa-money-bill-alt"></i> Precio:
@@ -70,8 +82,6 @@
                   </span>
                 </li>
               </ul>
-            </div>
-            <div class="col-md-6">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item text-dark">
                   <i class="fas fa-th-large"></i> Area:
@@ -87,30 +97,17 @@
                   <span class="float-right"> </span>
                 </li>
                 <li class="list-group-item text-dark">
-                  <i class="fas fa-bed"></i> Vendendor:
+                  <i class="fas fa-user"></i> Rentador:
                   <span class="float-right">
                   </span>
                 </li>
               </ul>
             </div>
+            
           </div>
-
-          <!-- Description -->
-          <div class="row mb-5">
-            <div class="col-md-12">
-                {{ rooms.description }}
-            </div>
-          </div>
+          <a href="" class="btn btn-success btn-block">Reservar</a>
         </div>
-        <div class="col-md-3">
-          <div class="card mb-3">
-            <img class="card-img-top" src="{{ rooms.image.url }}" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Property Realtor</h5>
-            </div>
-          </div>
-          
-        </div>
+        
       </div>
     </div>
   </section>
