--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -56,7 +56,7 @@
                 <div class="col-md-6 mb-3">
                   <select name="price" class="form-control" id="type">
                     <option selected="true" disabled="disabled">Precio Max (Cualquiera)</option>
-                    {% for key,value in price_choices.items %}
+                    {% for key, value in price_choices.items %}
                       <option value="{{ key }}">{{ value }}</option>
                     {% endfor %}
                   </select>
@@ -98,7 +98,7 @@
                 <div class="listing-heading text-center">
                   <h4 class="text-dark"> {{ room.title }}</h4>
                   <p class="text-muted">
-                    <i class="fas fa-map-marker color-personalizado"></i> {{ room.location }}</p>
+                    <i class="fas fa-map-marker color-personalizado"></i> {{ room.city }}, {{ room.state }}</p>
                 </div>
                 <hr>
                 <div class="row py-2 color-personalizado">
@@ -113,7 +113,7 @@
                   <div class="col-6">
                     <i class="fas fa-bath"></i> Baños: {{ room.bathrooms }}</div>
                 </div>
-                <a href="" class="btn btn-primary btn-block">Mas Informacion</a>
+                <a href="{% url 'room' id=room.id %}" class="btn btn-primary btn-block">Mas Informacion</a>
               </div>
             </div>
           </div>
