--- a/templates/rooms/rooms.html
+++ b/templates/rooms/rooms.html
@@ -37,7 +37,7 @@
           </div>
           <div class="col-md-9 text-left">
             <p class="lead">
-              <i class="fas fa-map-marker"></i> {{ rooms.city }} {{ rooms.state }}, {{ rooms.location }}
+              <i class="fas fa-map-marker"></i> {{ rooms.location }}
             </p>
           </div>
         </div>
