--- a/templates/rooms/rooms.html
+++ b/templates/rooms/rooms.html
@@ -93,8 +93,8 @@
                   </span>
                 </li>
                 <li class="list-group-item text-dark">
-                  <i class="fas fa-calendar"></i> rooms Date:
-                  <span class="float-right"> </span>
+                  <i class="fas fa-calendar"></i> Fecha:
+                  <span class="float-right"> {{ rooms.fecha }} </span>
                 </li>
                 <li class="list-group-item text-dark">
                   <i class="fas fa-user"></i> Rentador:
