--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -1,3 +1,9 @@
+/* Cambia el font-family en el cuerpo de tu página */
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+
 .color-personalizado {
   color: #6C96F8; /* Reemplaza esto con tu valor hexadecimal */
 }
