--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -34,13 +34,18 @@
   <section id="about" class="py-4">
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="">
           <h2>En busca de la habitacion perfecta</h2>
           <p class="lead">En RooMe trabajamos para ofrecerte la mejor habitacion a un precio justo!</p>
-          <img src="{% static 'img/hero-sec.jpg' %}" alt=""> 
-          <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
-            neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
-            commodi id libero eveniet harum perferendis laborum molestias quia.</p>
+          <img src="{% static 'img/hero-sec.jpg' %}" alt="" class="imagen-pequena"> 
+          <p class="mt-4">
+            ¡Bienvenido a RooMe de renta de habitaciones! Convierte tus viajes en experiencias únicas 
+            al encontrar la habitación perfecta para tu estadía. Navega por una amplia selección de alojamientos 
+            de calidad, desde acogedores bed and breakfasts hasta lujosos apartamentos, y reserva con facilidad. 
+            Con fotos detalladas, reseñas confiables y opciones de filtrado personalizado, planificar tu 
+            próxima escapada nunca ha sido tan sencillo. Descubre la comodidad, la autenticidad y la variedad 
+            que ofrecemos, y comienza a crear recuerdos inolvidables con cada estadía. 
+            ¡Bienvenido a tu hogar lejos de casa!</p>
         </div>
       </div>
     </div>
