--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="row py-2 color-personalizado">
                   <div class="col-6">
-                    <i class="fas fa-bed"></i> Habitaciones: {{ room.bedrooms }}</div>
+                    <i class="fas fa-bed"></i> Dormitorios: {{ room.bedrooms }}</div>
                   <div class="col-6">
                     <i class="fas fa-bath"></i> Baños: {{ room.bathrooms }}</div>
                 </div>
