cambios en la pagina de habitaciones, mas iamgenes a rooms

--- a/RooMe/static/css/style.css
+++ b/RooMe/static/css/style.css
@@ -20,6 +20,10 @@ img {
   opacity: 0.9;
   text-transform: uppercase; }
 
+  .img-main{
+    height: 500px;
+    width: auto;
+  }
 
 
 .social a {
