--- a/RooMe/static/css/bootstrap.css
+++ b/RooMe/static/css/bootstrap.css
@@ -395,9 +395,10 @@ mark,
 
 
 .img-fluid {
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 100%;
   height: auto; }
-
+  
   
 .img-thumbnail {
   padding: 0.25rem;
