--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -37,10 +37,11 @@
       <div class="row">
         <div class="col-md-12">
           <h2>Welcome {{ user.first_name }}</h2>
-          {% if room %}
-            <p>Here are the property listings that you have inquired about</p>
+          {% if room  %}
+          <p>Here are the property listings that you have inquired about</p>   
                   {{ room.title }} 
                   {{ room.state }}
+                  {{ reserva.fecha_reserva}}
           {% else %}
             <p>You have not made any inquiries</p>
           {% endif %}
