--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -35,7 +35,11 @@
             {% if user.is_superuser %}
               <li class="nav-item mr-3">
                   <a class="nav-link" href="{% url 'admin:index' %}">Administrador</a>
-              </li>
+            </li>
+            <li class="nav-item mr-3">
+              <a class="nav-link" href="{% url 'datos' %}">Analítica de datos</a>
+
+            </li>
             {% else %}
             {% if 'dashboard' in request.path %}
               class="nav-item active mr-3"
