--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -64,8 +64,35 @@
     <div class="container">
       <h2 class="text-center">Nuestro equipo</h2>
       <div class="row text-center">
-        <h1>Equipo RooMe</h1>    
+          <div class="col-md-4">
+              <img src="" alt="" class="rounded-circle mb-3">
+              <h4>Simon Botero</h4>
+              <p class="text-success">
+                <i class="fas fa-award text-success mb-3"></i> Developer</p>
+              <hr>
+              <p>
+                <i class="fas fa-envelope-open"></i> sboterov3@eafit.edu.co</p>
+            </div>
+            <div class="col-md-4">
+              <img src="" alt="" class="rounded-circle mb-3">
+              <h4>Miguel Martinez</h4>
+              <p class="text-success">
+                <i class="fas fa-award text-success mb-3"></i> Developer</p>
+              <hr>
+              <p>
+                <i class="fas fa-envelope-open"></i> mamartin11@eafit.edu.co</p>
+            </div>
+            <div class="col-md-4">
+              <img src="" alt="" class="rounded-circle mb-3">
+              <h4>Jacobo Zuluaga</h4>
+              <p class="text-success">
+                <i class="fas fa-award text-success mb-3"></i> Developer</p>
+              <hr>
+              <p>
+                <i class="fas fa-envelope-open"></i> jzuluagaj@eafit.edu.co</p>
+            </div>
       </div>
     </div>
   </section>
 {% endblock %}
+
